# rpi-osc

./: README.md  portaudio_in.cpp
CinderMicPi/linux/: CMakeLists.txt  cibuild
CinderMicPi/linux/Debug/ogl/: CMakeCache.txt  Makefile  cmake_install.cmake
CinderMicPi/src/: MultichannelOutputApp.cpp
